chore: first attempt

--- a/_config.yml
+++ b/_config.yml
@@ -35,12 +35,12 @@ social:
   name: Di Wu
   email: im.dwuu@gmail.com
   links:
-    - title: GitHub
-      url: https://github.com/dwuuuuuuu
-      icon: "fab fa-github"
-    - title: LinkedIn
-      url: https://www.linkedin.com/in/di-wu-a248ab2b8/
-      icon: "fab fa-linkedin"
+#    - title: GitHub
+#      url: https://github.com/dwuuuuuuu
+#      icon: "fab fa-github"
+#    - title: LinkedIn
+#      url: https://www.linkedin.com/in/di-wu-a248ab2b8/
+#      icon: "fab fa-linkedin"
 
 
 # Site Verification Settings
