chore: first attempt

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,6 +6,10 @@
 #   url: {homepage_of_author}
 # -------------------------------------
 
+dwuuuuuuu:
+  name: Di Wu
+  url: https://github.com/dwuuuuuuu
+
 cotes:
   name: Cotes Chung
   twitter: cotes2020
