chore: first attempt

--- a/_config.yml
+++ b/_config.yml
@@ -152,6 +152,7 @@ paginate: 10
 
 # The base URL of your site
 baseurl: ""
+destination: docs
 
 # ------------ The following options are not recommended to be modified ------------------
 
