--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -45,8 +45,12 @@ jobs:
           ruby-version: 3.3
           bundler-cache: true
 
+#      - name: Build site
+#        run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
+#        env:
+#          JEKYLL_ENV: "production"
       - name: Build site
-        run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
+        run: bundle exec jekyll build --source . --destination _site
         env:
           JEKYLL_ENV: "production"
 
@@ -56,10 +60,16 @@ jobs:
             \-\-disable-external \
             \-\-ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/"
 
+#      - name: Upload site artifact
+#        uses: actions/upload-pages-artifact@v3
+#        with:
+#          path: "_site${{ steps.pages.outputs.base_path }}"
+
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "_site${{ steps.pages.outputs.base_path }}"
+          path: "_site"
+
 
   deploy:
     environment:
