--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: America/New_York
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Di Wu # the main title
+title: Elliana Li # the main title
 
 tagline: M.Eng in Financial Engineering @ Cornell # it will display as the subtitle
 
