--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -7,8 +7,8 @@
 # -------------------------------------
 
 dwuuuuuuu:
-  name: Di Wu
-  url: https://github.com/dwuuuuuuu
+  name: EllianaLi
+  url: https://github.com/EllianaLi
 
 cotes:
   name: Cotes Chung
