--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -5,12 +5,12 @@
 
 - type: linkedin
   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-  url:  'https://www.linkedin.com/in/di-wu-a248ab2b8/'         # Fill with your Linkedin homepage
+  url:  'www.linkedin.com/in/binxili020703'         # Fill with your Linkedin homepage
 
 
 - type: github
   icon: "fab fa-github"
-  url: 'https://github.com/dwuuuuuuu'
+  url: 'https://github.com/EllianaLi'
 
 #- type: twitter
 #  icon: "fa-brands fa-x-twitter"
