--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,9 +3,9 @@
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
 
-- type: linkedin
-  icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-  url:  'www.linkedin.com/in/binxili020703'         # Fill with your Linkedin homepage
+# - type: linkedin
+#   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
+#   url:  'www.linkedin.com/in/binxili020703'         # Fill with your Linkedin homepage
 
 
 - type: github
