--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: America/New_York
 
 title: Elliana Li # the main title
 
-tagline: M.Eng in Financial Engineering @ Cornell # it will display as the subtitle
+tagline: I collect noise, carve signals, and call it balance. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   Welcome to my personal website! You know you love me ! 
