--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,7 +6,7 @@
 #   url: {homepage_of_author}
 # -------------------------------------
 
-dwuuuuuuu:
+EllianaLi:
   name: EllianaLi
   url: https://github.com/EllianaLi
 
