--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,8 +6,8 @@
 #   url: {homepage_of_author}
 # -------------------------------------
 
-EllianaLi:
-  name: EllianaLi
+Elliana:
+  name: Elliana Li
   url: https://github.com/EllianaLi
 
 cotes:
